--- a/assets/styles/mixins.scss
+++ b/assets/styles/mixins.scss
@@ -70,3 +70,9 @@
     background-color: $color-mainMenuButtonHover;
   }
 }
+
+@mixin text-truncate() {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
