--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -243,3 +243,125 @@ body {
       align-content: center;
       justify-content: center;
       align-self: center; }
+    body .content .board {
+      margin-top: 50px;
+      display: flex;
+      flex-flow: row nowrap;
+      flex: 100%;
+      align-content: flex-start;
+      justify-content: flex-start;
+      align-self: auto;
+      padding: 10px;
+      overflow-x: auto; }
+      body .content .board .board-col {
+        display: flex;
+        flex-flow: row nowrap;
+        flex: 1;
+        align-content: flex-start;
+        justify-content: flex-start;
+        align-self: auto;
+        margin: 0 10px;
+        padding: 5px;
+        background-color: rgba(0, 0, 0, 0.16);
+        min-width: 15%;
+        max-width: 25%;
+        transition: .5s; }
+        body .content .board .board-col:hover {
+          background-color: rgba(0, 0, 0, 0.4); }
+        body .content .board .board-col .board-col-content {
+          display: flex;
+          flex-flow: column nowrap;
+          flex: 0 0 100%;
+          align-content: flex-start;
+          justify-content: flex-start;
+          align-self: auto; }
+        body .content .board .board-col .col-header {
+          display: flex;
+          flex-flow: row nowrap;
+          flex: 0 0 40px;
+          align-content: center;
+          justify-content: center;
+          align-self: auto;
+          width: calc(100% + 10px);
+          margin: -5px;
+          background-color: rgba(0, 0, 0, 0.2);
+          color: #ffffff;
+          line-height: 40px;
+          font-family: 'Pacifico', sans-serif;
+          font-size: 26px; }
+        body .content .board .board-col .col-items-holder {
+          display: flex;
+          flex-flow: row nowrap;
+          flex: 1;
+          align-content: center;
+          justify-content: center;
+          align-self: auto;
+          width: 100%;
+          padding: 10px 0 5px; }
+          body .content .board .board-col .col-items-holder .col-items-wrap {
+            display: flex;
+            flex-flow: column nowrap;
+            flex: 1;
+            align-content: flex-start;
+            justify-content: flex-start;
+            align-self: auto;
+            padding: 0 5px; }
+            body .content .board .board-col .col-items-holder .col-items-wrap .col-item {
+              font-family: 'Varela Round', sans-serif;
+              display: flex;
+              flex-flow: row wrap;
+              flex: 0 0 1;
+              align-content: flex-start;
+              justify-content: flex-start;
+              align-self: auto;
+              width: 100%;
+              min-height: 100px;
+              background-color: rgba(0, 0, 0, 0.1);
+              margin: 0 0 5px;
+              padding: 5px; }
+              body .content .board .board-col .col-items-holder .col-items-wrap .col-item:hover {
+                background-color: rgba(0, 0, 0, 0.2); }
+              body .content .board .board-col .col-items-holder .col-items-wrap .col-item .item-header {
+                display: flex;
+                flex-flow: row nowrap;
+                flex: 0 0 100%;
+                align-content: flex-start;
+                justify-content: flex-start;
+                align-self: auto;
+                height: 24px;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
+                body .content .board .board-col .col-items-holder .col-items-wrap .col-item .item-header .item-title {
+                  display: flex;
+                  flex-flow: row nowrap;
+                  flex: 1;
+                  align-content: flex-start;
+                  justify-content: flex-start;
+                  align-self: auto;
+                  text-transform: uppercase;
+                  line-height: 26px;
+                  color: white;
+                  font-size: 17px;
+                  margin-left: 10px;
+                  height: 24px;
+                  white-space: nowrap;
+                  overflow: hidden;
+                  text-overflow: ellipsis; }
+                body .content .board .board-col .col-items-holder .col-items-wrap .col-item .item-header .item-tools {
+                  display: flex;
+                  flex-flow: row nowrap;
+                  flex: 0 0 80px;
+                  align-content: center;
+                  justify-content: flex-end;
+                  align-self: auto;
+                  height: 24px; }
+                  body .content .board .board-col .col-items-holder .col-items-wrap .col-item .item-header .item-tools .tool-item {
+                    display: inline-block;
+                    display: flex;
+                    flex-flow: row nowrap;
+                    flex: 0 0 20px;
+                    align-content: flex-end;
+                    justify-content: center;
+                    align-self: auto;
+                    height: 20px;
+                    background-color: rgba(0, 0, 0, 0.1);
+                    margin: 0 3px; }
