--- a/assets/styles/constants.scss
+++ b/assets/styles/constants.scss
@@ -13,6 +13,9 @@ $color-barBorder: rgba(57, 57, 57, 0.84);
 $color-mainMenuButton: rgba(0, 0, 0, 0.2);
 $color-mainMenuButtonBorder: rgba(255, 255, 255, 0.43);
 $color-mainMenuButtonHover: rgba(255, 255, 255, 0.82);
+$color-input: rgba(0, 0, 0, 0.1);
+$color-inputBorder: rgba(255, 255, 255, 0.58);
+$color-inputHover: rgba(44, 44, 44, 0.82);
 $color-veryLightTransparentBalck: rgba(0,0,0,0.1);
 $color-lightTransparentBalck: rgba(0,0,0,0.2);
 
@@ -35,3 +38,4 @@ $size-boardColumnMaxWidth: 25%;
 $size-boardColumnMinWidth: 15%;
 
 $time-defaultTransition: .5s;
+$time-defaultFastTransition: .2s;
