Added board columns and tickets functionality

--- a/assets/styles/constants.scss
+++ b/assets/styles/constants.scss
@@ -1,7 +1,7 @@
 $color-primaryWhite: #ffffff;
 $color-primaryBlack: #494949;
-$color-defaultShadow: rgba(0,0,0,0.45);
-$color-defaultShadowHover: rgba(0,0,0,0.75);
+$color-defaultShadow: rgba(0, 0, 0, 0.45);
+$color-defaultShadowHover: rgba(0, 0, 0, 0.75);
 $color-defaultBackground: #afd3ff;
 $color-mainMenuBackground: rgba(0, 0, 0, 0.22);
 $color-mainMenuBackgroundHover: rgba(0, 0, 0, 0.61);
@@ -16,8 +16,12 @@ $color-mainMenuButtonHover: rgba(255, 255, 255, 0.82);
 $color-input: rgba(0, 0, 0, 0.1);
 $color-inputBorder: rgba(255, 255, 255, 0.58);
 $color-inputHover: rgba(44, 44, 44, 0.82);
-$color-veryLightTransparentBalck: rgba(0,0,0,0.1);
-$color-lightTransparentBalck: rgba(0,0,0,0.2);
+$color-veryLightTransparentBalck: rgba(0, 0, 0, 0.1);
+$color-lightTransparentBalck: rgba(0, 0, 0, 0.2);
+$color-boardSpecialElementBackground: rgba(0, 0, 0, 0.4);
+$color-boardSpecialElementBackgroundHover: rgba(0, 0, 0, 0.6);
+$color-boardAddColumnFormBackground: rgba(0, 0, 0, 0.3);
+$color-boardAddButtonBorder: #7f7f7f;
 
 $fontSize-huge: 30px;
 $fontSize-extraLarge: 24px;
