--- a/assets/styles/elements.scss
+++ b/assets/styles/elements.scss
@@ -1,134 +1,144 @@
 h1 {
-  @include font-pacifico();
-  @include small-text-shadow();
-  font-size: $fontSize-huge;
-  color: $color-primaryWhite;
-  transition: $time-defaultTransition;
+    @include font-pacifico();
+    @include small-text-shadow();
+    font-size: $fontSize-huge;
+    color: $color-primaryWhite;
+    transition: $time-defaultTransition;
 }
+
 h1:hover {
-  @include small-text-shadow($color-defaultShadowHover);
+    @include small-text-shadow($color-defaultShadowHover);
 }
 
 h2 {
-  @include font-pacifico();
-  font-size: $fontSize-large;
-  color: $color-primaryWhite;
+    @include font-pacifico();
+    font-size: $fontSize-large;
+    color: $color-primaryWhite;
 }
 
 .menu-button {
-  @include form-element(auto, auto, $color-mainMenuButton, $color-mainMenuButtonBorder);
-  @include flex(0 0 100px, center, center, center);
-  padding: 10px 10px;
-  font-size: $fontSize-small;
-  text-align: center;
-  border-radius: 3px;
-  color: $color-primaryWhite;
-  font-weight: bold;
-  text-transform: uppercase;
-  transition: $time-defaultTransition;
+    @include form-element(auto, auto, $color-mainMenuButton, $color-mainMenuButtonBorder);
+    @include flex(0 0 100px, center, center, center);
+    padding: 10px 10px;
+    font-size: $fontSize-small;
+    text-align: center;
+    border-radius: 3px;
+    color: $color-primaryWhite;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: $time-defaultTransition;
 
-  &:hover {
-    color: $color-primaryBlack;
-    background-color: $color-mainMenuButtonHover;
-  }
+    &:hover {
+        color: $color-primaryBlack;
+        background-color: $color-mainMenuButtonHover;
+    }
 }
 
 .bar {
-  @include small-box-shadow($color-barShadow);
-  background-color: $color-barBackground;
-  border: 1px solid $color-barBorder;
-  padding: $size-barDefaultPadding;
-  margin: $size-barDefaultMargin;
+    @include small-box-shadow($color-barShadow);
+    background-color: $color-barBackground;
+    border: 1px solid $color-barBorder;
+    padding: $size-barDefaultPadding;
+    margin: $size-barDefaultMargin;
 }
 
 .row-heading {
-  @include flex(0 0 100%, center, center, center, row wrap);
-  @include font-varela();
-  @include small-text-shadow(rgba(0, 0, 0, 0.6));
-  font-size: $fontSize-extraLarge;
-  color: $color-primaryWhite;
-  padding: 10px;
+    @include flex(0 0 100%, center, center, center, row wrap);
+    @include font-varela();
+    @include small-text-shadow(rgba(0, 0, 0, 0.6));
+    font-size: $fontSize-extraLarge;
+    color: $color-primaryWhite;
+    padding: 10px;
 }
 
 .flex-button {
-  @include form-element(auto, auto, $color-mainMenuButton, $color-mainMenuButtonBorder);
-  @include flex(1, center, center, center);
-  padding: 10px;
-  margin: 15px;
-  font-size: $fontSize-large;
-  text-align: center;
-  border-radius: 3px;
-  color: $color-primaryWhite;
-  font-weight: bold;
-  text-transform: uppercase;
-  transition: $time-defaultTransition;
+    @include form-element(auto, auto, $color-mainMenuButton, $color-mainMenuButtonBorder);
+    @include flex(1, center, center, center);
+    padding: 10px;
+    margin: 15px;
+    font-size: $fontSize-large;
+    text-align: center;
+    border-radius: 3px;
+    color: $color-primaryWhite;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: $time-defaultTransition;
 
-  &:hover {
-    color: $color-primaryBlack;
-    background-color: $color-mainMenuButtonHover;
-  }
+    &:hover {
+        color: $color-primaryBlack;
+        background-color: $color-mainMenuButtonHover;
+    }
 }
 
 .flex-input {
-  @include flex(1, center, center, center);
-  padding: 10px;
-  margin: 15px;
-  font-size: $fontSize-large;
-  text-align: center;
-  border-radius: 3px;
-  color: $color-primaryWhite;
-  font-weight: bold;
-  text-transform: uppercase;
-  transition: $time-defaultTransition;
+    @include flex(1, center, center, center);
+    padding: 10px;
+    margin: 15px;
+    font-size: $fontSize-large;
+    text-align: center;
+    border-radius: 3px;
+    color: $color-primaryWhite;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: $time-defaultTransition;
 
-  &:hover {
-    color: $color-primaryBlack;
-    background-color: $color-mainMenuButtonHover;
-  }
+    &:hover {
+        color: $color-primaryBlack;
+        background-color: $color-mainMenuButtonHover;
+    }
 }
 
 .flex-button-small {
-  @include flexButton(16px, 6px, 6px, $fontSize-small);
+    @include flexButton(16px, 6px, 6px, $fontSize-small);
 }
 
 .flex-button-medium {
-  @include flexButton(24px, 10px, 10px, $fontSize-large);
+    @include flexButton(24px, 10px, 10px, $fontSize-large);
 }
 
 .flex-button-huge {
-  @include flexButton(32px, 15px, 15px, $fontSize-huge);
+    @include flexButton(32px, 15px, 15px, $fontSize-huge);
 }
 
 .flex-input-small {
-  @include flexInput(16px, 6px, 6px, $fontSize-small);
+    @include flexInput(16px, 6px, 6px, $fontSize-small);
 }
 
 .flex-input-medium {
-  @include flexInput(24px, 10px, 10px, $fontSize-large);
+    @include flexInput(24px, 10px, 10px, $fontSize-large);
 }
 
 .flex-input-huge {
-  @include flexInput(32px, 15px, 15px, $fontSize-huge);
+    @include flexInput(32px, 15px, 15px, $fontSize-huge);
 }
 
 .input-style {
-  @include form-element(auto, auto, $color-input, $color-inputBorder);
+    @include form-element(auto, auto, $color-input, $color-inputBorder);
 }
 
 .flex-width-70 {
-  @include flex(0 0 70%, flex-start, flex-start, center);
+    @include flex(0 0 70%, flex-start, flex-start, center);
+}
+
+.flex-width-60 {
+    @include flex(0 0 60%, flex-start, flex-start, center);
+}
+
+.flex-full-row {
+    flex: 100%;
+    flex-flow: row wrap;
 }
 
 .uppercase {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .row {
-  display: flex;
-  flex-flow: row wrap;
-  flex: 0 0 100%;
+    display: flex;
+    flex-flow: row wrap;
+    flex: 0 0 100%;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
