--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -120,7 +120,9 @@ body {
                 max-width: $size-boardColumnMaxWidth;
                 transition: .5s;
 
-                &:hover {
+                &:hover,
+                &.current
+                {
                     background-color: $color-boardBackgroundHover;
                 }
 
@@ -161,13 +163,22 @@ body {
                             display: none;
                         }
 
+                        .col-item-wrap {
+                            @include flex(100%, flex-start, flex-start, flex-start, column nowrap);
+                        }
+
                         .col-item {
+                            border: 1px solid transparent;
                             @include font-varela();
                             @include flex(0 0 1, flex-start, flex-start, auto, row wrap);
                             min-height: 100px;
                             background-color: $color-veryLightTransparentBalck;
                             margin: 0 0 5px;
                             padding: 5px;
+
+                            &.current {
+                                border: 1px solid white;
+                            }
 
                             &.special-item {
                                 background-color: $color-boardSpecialElementBackground;
@@ -179,7 +190,9 @@ body {
                                 }
                             }
 
-                            &:hover {
+                            &:hover,
+                            &.current
+                            {
                                 background-color: $color-lightTransparentBalck;
                             }
 
