--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -466,7 +466,7 @@ body {
         min-width: 15%;
         max-width: 25%;
         transition: .5s; }
-        body .content .board .board-col:hover {
+        body .content .board .board-col:hover, body .content .board .board-col.current {
           background-color: rgba(0, 0, 0, 0.4); }
         body .content .board .board-col .board-col-content {
           display: flex;
@@ -522,7 +522,15 @@ body {
             overflow-y: scroll; }
             body .content .board .board-col .col-items-holder .col-items-wrap::-webkit-scrollbar {
               display: none; }
+            body .content .board .board-col .col-items-holder .col-items-wrap .col-item-wrap {
+              display: flex;
+              flex-flow: column nowrap;
+              flex: 100%;
+              align-content: flex-start;
+              justify-content: flex-start;
+              align-self: flex-start; }
             body .content .board .board-col .col-items-holder .col-items-wrap .col-item {
+              border: 1px solid transparent;
               font-family: 'Varela Round', sans-serif;
               display: flex;
               flex-flow: row wrap;
@@ -534,13 +542,15 @@ body {
               background-color: rgba(0, 0, 0, 0.1);
               margin: 0 0 5px;
               padding: 5px; }
+              body .content .board .board-col .col-items-holder .col-items-wrap .col-item.current {
+                border: 1px solid white; }
               body .content .board .board-col .col-items-holder .col-items-wrap .col-item.special-item {
                 background-color: rgba(0, 0, 0, 0.4);
                 min-height: 140px;
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.75); }
                 body .content .board .board-col .col-items-holder .col-items-wrap .col-item.special-item:hover {
                   background-color: rgba(0, 0, 0, 0.6); }
-              body .content .board .board-col .col-items-holder .col-items-wrap .col-item:hover {
+              body .content .board .board-col .col-items-holder .col-items-wrap .col-item:hover, body .content .board .board-col .col-items-holder .col-items-wrap .col-item.current {
                 background-color: rgba(0, 0, 0, 0.2); }
               body .content .board .board-col .col-items-holder .col-items-wrap .col-item .item-header {
                 display: flex;
