Added tickets colors and ability to move hem between columns

--- a/assets/styles/constants.scss
+++ b/assets/styles/constants.scss
@@ -23,6 +23,24 @@ $color-boardSpecialElementBackgroundHover: rgba(0, 0, 0, 0.6);
 $color-boardAddColumnFormBackground: rgba(0, 0, 0, 0.3);
 $color-boardAddButtonBorder: #7f7f7f;
 
+$color-ticketColorRed: rgba(255, 0, 0, 0.4);
+$color-ticketColorRedActive: rgba(255, 0, 0, 0.6);
+
+$color-ticketColorGreen: rgba(0, 255, 0, 0.4);
+$color-ticketColorGreenActive: rgba(0, 255, 0, 0.6);
+
+$color-ticketColorBlue: rgba(0, 0, 255, 0.4);
+$color-ticketColorBlueActive: rgba(0, 0, 255, 0.6);
+
+$color-ticketColorPurple: rgba(169, 0, 255, 0.4);
+$color-ticketColorPurpleActive: rgba(190, 0, 255, 0.6);
+
+$color-ticketColorYellow: rgba(255, 246, 0, 0.4);
+$color-ticketColorYellowActive: rgba(255, 246, 0, 0.6);
+
+$color-ticketColorOrange: rgba(255, 142, 0, 0.4);
+$color-ticketColorOrangeActive: rgba(255, 117, 0, 0.6);
+
 $fontSize-huge: 30px;
 $fontSize-extraLarge: 24px;
 $fontSize-large: 20px;
