Webpack setup for React + TypeScript + SCSS

--- a/assets/styles/constants.scss
+++ b/assets/styles/constants.scss
@@ -1,4 +1,4 @@
-$color-primaryWhite: #ffffff;
+$color-primaryWhite: #fff;
 $color-primaryBlack: #494949;
 $color-defaultShadow: rgba(0, 0, 0, 0.45);
 $color-defaultShadowHover: rgba(0, 0, 0, 0.75);
